# modelcli

./: Cargo.toml  PLAN-2.md  PLAN.md  README.md  dist-workspace.toml  install.sh  justfile  logo.txt  tag_and_release.sh
.claude/: settings.local.json
.github/workflows/: release.yml
npm/: README.md  bin.js  install.js  package.json
src/: main.rs  storage.rs  ui.rs
src/api/: call.rs  mod.rs  models_dev.rs
src/commands/: connect.rs  mod.rs  models.rs  prompt.rs
