[package]
name = "modelcli"
version = "0.1.0"
edition = "2024"

[dependencies]
rig-core = { version = "0.33", features = ["all"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
inquire = "0.7"
arboard = "3"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
colored = "2"
anyhow = "1"
