[package]
name = "modelcli"
version = "0.0.2"
edition = "2024"
description = "Call any LLM from the command line via models.dev"
repository = "https://github.com/Blankeos/modelcli"
license = "MIT"

[dependencies]
rig-core = { version = "0.33", features = ["all"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
inquire = "0.7"
arboard = "3"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
colored = "2"
anyhow = "1"
json_comments = "0.2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
